Flashlight implemented + horizontal Design finished

--- a/PascalBoard/PascalBoard.csproj
+++ b/PascalBoard/PascalBoard.csproj
@@ -65,10 +65,17 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 		<PackageReference Include="Plugin.Maui.Audio" Version="3.0.0" />
+		<PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="BarPage.xaml">
+	  <Compile Update="ShakeClass.xaml.cs">
+	    <DependentUpon>ShakeClass.xaml</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiXaml Update="ShakeClass.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="VibrationPage.xaml">
