--- a/PascalBoard/Platforms/Android/AndroidManifest.xml
+++ b/PascalBoard/Platforms/Android/AndroidManifest.xml
@@ -5,4 +5,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.VIBRATE" />
 	<uses-permission android:name="android.permission.HIGH_SAMPLING_RATE_SENSORS" />
+	<uses-permission android:name="android.permission.FLASHLIGHT" />
+	<uses-permission android:name="android.permission.CAMERA" />
 </manifest>
